show total carts

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -32,6 +32,8 @@
       </div>
         
     </main>
+
+    <div class="cart-footer hide"><p class="cart-total">Total: </p></div>
     
     <footer id="footer"></footer>
   </body>
